fix z-index issue with error tooltips

--- a/cdap-ui/app/directives/group-side-panel/group-side-panel.less
+++ b/cdap-ui/app/directives/group-side-panel/group-side-panel.less
@@ -180,7 +180,7 @@ my-side-panel {
 }
 
 .tooltip-error {
-  z-index: 1040; // lower z-index than modal
+  z-index: 1020; // lower z-index than modal
 
   .tooltip-inner {
     background-color: @brand-danger;
